--- a/image_compression.ipynb
+++ b/image_compression.ipynb
@@ -6,7 +6,7 @@
       "name": "image compression ",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOVdCnk0LeZAwEbRmxvEQ1y",
+      "authorship_tag": "ABX9TyNVD//JTzztzpluVtTfdZjo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,7 @@
       "source": [
         "# @title ##**Enter your api key** { display-mode: \"form\" }\r\n",
         "\r\n",
-        "Enter_tinify_api_key= \"qcs5R3BgP8hgH9jXwkpzm2fwyXnZgDqv\" #@param {type:\"string\"}\r\n",
+        "Enter_tinify_api_key= \"\" #@param {type:\"string\"}\r\n",
         "\r\n",
         "try:\r\n",
         "  tinify.key = Enter_tinify_api_key\r\n",
@@ -521,7 +521,7 @@
         "# past_drive_folder_link= \"https://drive.google.com/drive/folders/1FOXyEENNGsEPJ7eJ0b-LHuD7FUdm9Srw?usp=sharing\" #@param {type:\"string\"}\r\n",
         "\r\n",
         "# folder_id= past_drive_folder_link.split('/')[-1].split(\"?\")[0]\r\n",
-        "drive_folder_id= \"1FOXyEENNGsEPJ7eJ0b-LHuD7FUdm9Srw\" #@param {type:\"string\"}\r\n",
+        "drive_folder_id= \"\" #@param {type:\"string\"}\r\n",
         "\r\n",
         "from kora import drive\r\n",
         "drive.download_folder(drive_folder_id)\r\n",
